--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto";
+    background-color: rgb(245, 245, 245);
 }
 
 #portfolio {
@@ -12,62 +13,78 @@ body {
     position: fixed;
     bottom: 15px;
     right: 15px;
-    border: 1px solid #ccc;
     border-radius: 50px;
-    box-shadow:        
-        1px 1px 3px  #ccc; 
-    background-color: white;
+    box-shadow: 
+        -2px -2px 8px rgba(255, 255, 255, 1),
+        -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        2px 2px 8px rgba(0, 0, 0, 0.18);
+    color: rgb(90, 90, 90);
 }
 
-#arrow {
-    width: 24px;
-    height: 24px;
-    margin: 3px 5px;
+
+.scroll-up {
+    display: flex;
+    font-size: 2rem;
+    text-decoration: none;
+    color: #b6bbc5;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
 }
 
-.scroll-container:hover{
-    box-shadow:        
-        2px 2px 31px  rgb(189, 189, 189); 
-    border: 1px solid #ccc;
-
+.scroll-up i {
+    margin: auto;
 }
+
 .filter-bar {
     padding: 15px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .filter-label {
     margin-right: 10px;
-    color: RGB(15,44,62);
+    color: rgb(15,44,62);
 }
 
+/* neumorphic buttons */
 .filter-bar > a {
     font-size: 16px;
-    margin-right: 10px;
+    margin-right: 20px;
     text-decoration: none;
     padding: 8px 14px;
     border-radius: 50px;
+    box-shadow: 
+        -2px -2px 8px rgba(255, 255, 255, 1),
+        -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        2px 2px 8px rgba(0, 0, 0, 0.18);
+    color: rgb(90, 90, 90);
+}
 
-    border: 1px solid #ccc;
-    /* background: rgb(240, 240, 240); */
-    /* box-shadow:        
-        1px 1px 1px 2px #ccc;     */
-    border-radius: 50px;
-    color: #ccc;
+.filter-bar > a:hover {
+    box-shadow: 
+        inset -2px -2px 8px rgba(255, 255, 255, 1),
+        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        inset 2px 2px 8px rgba(0, 0, 0, 0.18);
+}
+
+.filter-bar > a:hover span {
+    display: inline-block;
+    transform: scale (0.98);
 }
 
 .filter-bar a.active {
     background: rgb(15,44,62);
     border-color: rgb(15,44,62);
+    box-shadow: none;
     color: white;
 }
 
-.filter-bar a:hover {
-    box-shadow:        
-    2px 2px 17px  rgb(189, 189, 189); 
-}
 
 .image-container {
     padding: 0;
