--- a/styles/nav.css
+++ b/styles/nav.css
@@ -25,19 +25,19 @@
     font-weight: bold;
     font-size: 35px;
     text-decoration: none;
-    color: black;
+    color: rgb(90, 90, 90);
 }
 
 
 .nav a {
     margin: 15px;
-    color: #000;
+    color: rgb(90, 90, 90);
     text-decoration: none;
     text-transform: uppercase;
     font-size: 14px;
 }
 
 .nav a:hover {
-    color: #000;
+    color: rgb(90, 90, 90);
     text-decoration: line-through;
 }
