--- a/styles/home.css
+++ b/styles/home.css
@@ -27,7 +27,7 @@ body {
 
 #about {
     position: relative;
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     width: 100%;
     height: 100vh;
     -webkit-background-size: cover;
@@ -47,15 +47,22 @@ body {
     margin-right: 20px;
     padding: 35px;
     border-radius: 40px;
-    background: rgba(80, 80, 80, 0.1);
-    box-shadow:
-        0 0.9px 0.7px rgba(0, 0, 0, 0.02),
-        0 2.1px 1.8px rgba(0, 0, 0, 0.028),
-        0 3.9px 3.4px rgba(0, 0, 0, 0.035),
-        0 6.9px 6px rgba(0, 0, 0, 0.042),
-        0 13px 11.3px rgba(0, 0, 0, 0.05),
-        0 31px 27px rgba(0, 0, 0, 0.07); 
+    /* background: rgba(80, 80, 80, 0.1); */
+    box-shadow: 
+        -2px -2px 8px rgba(255, 255, 255, 1),
+        -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        2px 2px 8px rgba(0, 0, 0, 0.18);
 }
+
+.half:hover {
+    box-shadow: 
+        inset -2px -2px 8px rgba(255, 255, 255, 1),
+        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        inset 2px 2px 8px rgba(0, 0, 0, 0.18);
+}
+
 
 .half > h2 {
     margin-top: 0;
@@ -66,8 +73,6 @@ body {
     line-height: 1.5em;
     font-size: 0.9em;
     letter-spacing: .5px;
-
-
 }
 
 a {
