--- a/styles/main.css
+++ b/styles/main.css
@@ -139,8 +139,8 @@ html {
 
 .scroll-container {
     position: fixed;
-    bottom: 15px;
-    right: 15px;
+    bottom: 40px;
+    right: 40px;
     border-radius: 50px;
     box-shadow: 
         -2px -2px 8px rgba(255, 255, 255, 1),
@@ -165,6 +165,11 @@ html {
     margin: auto;
 }
 
+
+
+.scroll-up:hover {
+    text-decoration: none;
+}
 .filter-bar {
     padding: 15px 0px;
     display: flex;
@@ -203,7 +208,7 @@ html {
 
 .filter-bar > a:hover span {
     display: inline-block;
-    transform: scale (0.98);
+    transform: scale(0.98);
 }
 
 .filter-bar a.active {
@@ -264,6 +269,8 @@ html {
 
 .contact-text {
     text-align: center;
+    font-size: 1.3rem;
+    margin-bottom: 15px;
 }
 
 .contact-section {
@@ -290,6 +297,15 @@ input {
     padding-left: 5px;
 }
 
+input:focus {
+    outline: none;
+    box-shadow:  
+        inset -2px -2px 8px rgba(255, 255, 255, 1),
+        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
+        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+        inset 2px 2px 8px rgba(0, 0, 0, 0.18);
+}
+
 .message-box {
     height: 100px;
 }
@@ -311,3 +327,18 @@ input[value] {
     font-size: 0.9rem;
     border: 1px black solid;
 }
+
+.submit:hover {
+    background-color: black;
+    color: white;
+    transition: 0.5s;
+}
+
+/* .submit:after {
+
+}
+
+
+.submit:active:after {
+    transition: 0s
+  } */
