--- a/styles/main.css
+++ b/styles/main.css
@@ -78,7 +78,6 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
     padding-top: 10vh;
-
 }
 .about-container {
     width: 85%;
@@ -134,9 +133,8 @@ html {
 
 /* portoflio */
 #portfolio {
-    padding-top: 5%;
+    padding-top: 10vh;
 }
-
 .scroll-container {
     position: fixed;
     bottom: 40px;
@@ -165,11 +163,11 @@ html {
     margin: auto;
 }
 
-
-
 .scroll-up:hover {
     text-decoration: none;
 }
+
+
 .filter-bar {
     padding: 15px 0px;
     display: flex;
@@ -182,7 +180,6 @@ html {
     margin-right: 10px;
     color: rgb(15,44,62);
 }
-
 /* neumorphic buttons */
 .filter-bar > a {
     font-size: 16px;
@@ -218,32 +215,40 @@ html {
     color: white;
 }
 
-
-.image-container {
-    padding: 0;
-    width: 85%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 10px;
+.masonry-wrapper {
+    padding: 1em;
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.image-container > div {
+.masonry {    
+    columns: 1;
+    column-gap: 8px;
+}
+
+.masonry > div {
     display: inline-block;
+    vertical-align: top;
+    margin-bottom: 10px;
+    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
+    transition: filter .25s ease-in-out;
 }
 
 img {
-    width: 400px;
-    height: 600px;
-    /* width: 100%;
-    max-width: 400px;
-    height: auto; */
+    max-width: 300px;
+    border-radius: 3px;
 }
 
-html {
-    scroll-behavior: smooth;
+@media only screen and (max-width: 1023px) and (min-width: 768px) {  .masonry {
+    columns: 2;
+  }
 }
-
+@media only screen and (min-width: 1024px) {
+  .masonry {
+    columns: 3;
+  }
+}
 
 /* contact */
 #contact-area {
