--- a/styles/main.css
+++ b/styles/main.css
@@ -77,53 +77,68 @@ body {
     height: 100vh;
     -webkit-background-size: cover;
     background-size: cover;
-    padding-top: 10vh;
+    padding-top: 13vh;
 }
+
 .about-container {
-    width: 85%;
+    width: 60%;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column ;
+    box-shadow: 
+    -2px -2px 8px rgba(255, 255, 255, 1),
+    -2px -2px 12px rgba(255, 255, 255, 0.5),
+    inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+    2px 2px 8px rgba(0, 0, 0, 0.18);
+    border-radius: 15px;
 }
 
-.half {
+.section {
     margin-right: 20px;
     padding: 35px;
-    border-radius: 40px;
     /* background: rgba(80, 80, 80, 0.1); */
-    box-shadow: 
-        -2px -2px 8px rgba(255, 255, 255, 1),
-        -2px -2px 12px rgba(255, 255, 255, 0.5),
-        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-        2px 2px 8px rgba(0, 0, 0, 0.18);
+
 }
 
-.half:hover {
-    box-shadow: 
-        inset -2px -2px 8px rgba(255, 255, 255, 1),
-        inset -2px -2px 12px rgba(255, 255, 255, 0.5),
-        inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-        inset 2px 2px 8px rgba(0, 0, 0, 0.18);
-}
-
-.half > h2 {
+.section>h2 {
     margin-top: 0;
 }
 
 .description {
     color: black;
     line-height: 1.5em;
-    font-size: 0.9em;
-    letter-spacing: .5px;
+    font-size: 1em;
+    letter-spacing: .4px;
 }
 
-a {
-    color: #000;
+.about-links{
+    color: blue;
     text-decoration: none;
+
 }
 
-a:hover {
+.about-links:hover {
     text-decoration: line-through;
+}
+
+footer {
+    position: relative;
+    bottom: 0; 
+    margin: 0 auto; 
+    display: flex;
+    flex-direction: row; 
+}
+
+.footer-link {
+    margin: 0;
+}
+.footer-link > a {
+    display: flex;
+    font-size: 2rem;
+    text-decoration: none;
+    color: #b6bbc5;
+    width: 3rem;
+    height: 3rem;
 }
 
 
@@ -137,8 +152,8 @@ html {
 }
 .scroll-container {
     position: fixed;
-    bottom: 40px;
-    right: 40px;
+    bottom: 2vw;
+    right: 2vw;
     border-radius: 50px;
     box-shadow: 
     -2px -2px 8px rgba(255, 255, 255, 1),
@@ -224,7 +239,7 @@ html {
 
 .masonry {    
     columns: 1;
-    column-gap: 8px;
+    column-gap: 10px;
 }
 
 .masonry > div {
@@ -236,18 +251,19 @@ html {
 }
 
 img {
-    max-width: 300px;
+    max-width: 310px;
     border-radius: 3px;
 }
 
-@media only screen and (max-width: 1023px) and (min-width: 768px) {  .masonry {
-    columns: 2;
-  }
+@media only screen and (max-width: 1023px) and (min-width: 768px) {  
+    .masonry {
+        columns: 2;
+    }
 }
 @media only screen and (min-width: 1024px) {
-  .masonry {
-    columns: 3;
-  }
+    .masonry {
+        columns: 3;
+    }
 }
 
 /* contact */
@@ -347,3 +363,4 @@ input[value] {
 .submit:active:after {
     transition: 0s
   } */
+
