--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* nav */
-.navbar {
+nav {
     position: fixed;
     display: flex;
     justify-content: center;
@@ -48,6 +48,8 @@ body {
     text-decoration: line-through;
 }
 
+
+
 /* home */
 .banner-area {
     position: relative;
@@ -78,13 +80,14 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
     padding-top: 13vh;
+
 }
 
 .about-container {
-    width: 60%;
+    max-width: 900px;
     margin: 0 auto;
     display: flex;
-    flex-direction: column ;
+    flex-direction: column;
     box-shadow: 
     -2px -2px 8px rgba(255, 255, 255, 1),
     -2px -2px 12px rgba(255, 255, 255, 0.5),
@@ -105,7 +108,7 @@ body {
 }
 
 .description {
-    color: black;
+    color: rgb(15,44,62);
     line-height: 1.5em;
     font-size: 1em;
     letter-spacing: .4px;
@@ -122,21 +125,26 @@ body {
 }
 
 footer {
-    position: relative;
+    position: fixed;
+    left: 0;
     bottom: 0; 
-    margin: 0 auto; 
+    width: 100%;
+    height: 5vh;
+    padding: 20px;
     display: flex;
-    flex-direction: row; 
+    align-items: flex-end;
+    flex-direction: row;
+    background-color: rgb(15,44,62); 
 }
 
 .footer-link {
-    margin: 0;
+    margin: 0 auto; 
 }
 .footer-link > a {
     display: flex;
     font-size: 2rem;
     text-decoration: none;
-    color: #b6bbc5;
+    color: white;
     width: 3rem;
     height: 3rem;
 }
