--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,11 @@ body {
     background-color: rgb(245, 245, 245);
 }
 
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
 /* nav */
 nav {
     position: fixed;
@@ -76,11 +81,10 @@ nav {
     position: relative;
     background-color: rgb(245, 245, 245);
     width: 100%;
-    height: 100vh;
     -webkit-background-size: cover;
     background-size: cover;
     padding-top: 13vh;
-
+    padding-bottom: 13vh;
 }
 
 .about-container {
@@ -97,7 +101,6 @@ nav {
 }
 
 .section {
-    margin-right: 20px;
     padding: 35px;
     /* background: rgba(80, 80, 80, 0.1); */
 
@@ -124,31 +127,47 @@ nav {
     text-decoration: line-through;
 }
 
+#content-wrap {
+    padding-bottom: 10rem;
+}
+
 footer {
-    position: fixed;
-    left: 0;
+    position: absolute;
     bottom: 0; 
     width: 100%;
-    height: 5vh;
-    padding: 20px;
+    height: 5rem;
+    padding: 1rem;
     display: flex;
-    align-items: flex-end;
+    justify-content: center; 
+
     flex-direction: row;
     background-color: rgb(15,44,62); 
 }
 
-.footer-link {
-    margin: 0 auto; 
+.footer-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;   
 }
+
+.footer-link a:nth-child(1) {
+    margin-right: 10px;
+}
+
 .footer-link > a {
     display: flex;
     font-size: 2rem;
     text-decoration: none;
     color: white;
-    width: 3rem;
-    height: 3rem;
+    width: 32px;
+    height: 32px;
+    margin-right: 0px;
 }
 
+.footer-link > a > i {
+    width: 32px;
+    height: 32px;
+}
 
 html {
     scroll-behavior: smooth;
@@ -239,15 +258,15 @@ html {
 }
 
 .masonry-wrapper {
-    padding: 1em;
-    max-width: 960px;
+    padding: 1em 0;
+    max-width: 980px;
     margin-right: auto;
     margin-left: auto;
 }
 
 .masonry {    
     columns: 1;
-    column-gap: 10px;
+    column-gap: 15px;
 }
 
 .masonry > div {
@@ -259,7 +278,7 @@ html {
 }
 
 img {
-    max-width: 310px;
+    max-width: 315px;
     border-radius: 3px;
 }
 
